# vialBot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  chat.py  health.py
backend/app/auth/: cognito.py
backend/app/ingestion/: chunk.py  index.py  load_pdf.py
backend/app/rag/: graph.py  nodes.py  prompts.py  retriever.py  state.py
backend/tests/: test_health.py  test_ingestion.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AuthGuard.tsx  Chat.tsx  Message.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: cognito.ts
frontend/src/services/: api.ts
