[project]
name = "vialbot-backend"
version = "0.1.0"
description = "Backend RAG del Código Nacional de Tránsito Colombiano"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "qdrant-client>=1.12.0",
    "psycopg[binary]>=3.2.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
